--- a/README.Rmd
+++ b/README.Rmd
@@ -1,118 +1,55 @@
 <!-- README.md is generated from README.Rmd. Please edit README.Rmd -->
 
 ---
-title: "Toolbox for package management on macOS"
+title: "Toolbox for R package management on macOS"
 output: github_document
 ---
 
 ## Foreword
 
-This document describes a **personal** toolbox for managing R packages
-on macOS. It is my personal philosophy and setup, shared here for reference
-and possible inspiration.
-It is **not** intended as a general-purpose package management solution.
+This repository documents a lightweight toolbox for managing R packages on macOS.
+It presents a **clear and explicit strategy** for separating CRAN packages from
+user-developed packages, with an emphasis on reproducibility, transparency, and
+long-term maintainability.
+
+This setup is shared as a **personal choice** for convenience. It is not intended to replace
+existing package managers or to provide a universal solution, but it may serve as an inspiration.
+
+---
 
 ## Overview
 
-Since I develop R packages frequently and use R over many years, it is important
-for me to have a clear and reproducible setup for managing packages, where
-personal development and CRAN packages are clearly separated.
+For users who develop R packages over long periods of time, it is often useful
+to distinguish clearly between:
 
 1. **System library** (`.Library`)
    - R base and recommended packages
    - CRAN packages
 
 2. **Development library** (custom path)
-   - User-developed packages under active development
+   - Packages under active development
 
-The design goals are:
+The design goals of this toolbox are:
 
 - Minimal complexity at R/RStudio startup
-- Full control over where packages are installed
+- Explicit control over package installation paths
 - No implicit behaviour or silent fallbacks
-- A clean and reproducible workflow for **R upgrades**
+- A reproducible workflow for R upgrades
 - No dependency on external repositories at startup
 
-This setup assumes that the **system library is writable**
-(standard macOS Framework installation of R).
-
----
-
-
-## Quick start
-
-This section summarises the minimal steps required to activate the toolbox
-on a new macOS machine.
-
-### 1. Define the development library
-
-Add the following line to your `~/.Renviron` file:
-
-```text
-MY_R_DEVLIB=~/Dropbox/Boulot/dev/r/myRlib
-```
-
-Restart RStudio after editing `.Renviron`.
-
----
-
-### 2. Copy the toolbox files
-
-Clone or download this repository, then copy the helper files to your local
-R configuration directory:
-
-```bash
-mkdir -p ~/.R/toolbox
-cp R/*.R ~/.R/toolbox/
-```
-
----
-
-### 3. Configure startup
-
-Add the following content **verbatim** to your `~/.Rprofile`:
-
-```r
-tb <- path.expand("~/.R/toolbox")
-
-source(file.path(tb, "00-config.R"))
-source(file.path(tb, "install_helpers.R"))
-source(file.path(tb, "upgrade_helpers.R"))
-source(file.path(tb, "diagnostics.R"))
-
-message("✅ R startup configured (system + dev)")
-```
-
-Restart RStudio.
-
----
-
-### 4. Verify the setup
-
-Run in R:
-
-```r
-check_setup()
-```
-
-You should see:
-
-- exactly two entries in `.libPaths()` (system + dev),
-- write access to both libraries,
-- no errors.
-
-At this point the toolbox is fully operational.
+This setup assumes that the **system library is writable**, as is the case for
+the standard macOS Framework installation of R.
 
 ---
 
 ## Repository structure
 
-This repository **includes the actual `.R` helper files**, stored under a
-top-level `/R/` directory (similarly to an R package layout, although this is
+This repository includes the helper scripts used by the toolbox, stored under
+a top-level `/R/` directory (similar to an R package layout, although this is
 *not* a package).
 
 ```
-toolbox/
+r-toolbox/
 ├─ README.Rmd
 └─ R/
    ├─ 00-config.R
@@ -121,9 +58,8 @@ toolbox/
    └─ diagnostics.R
 ```
 
-The repository serves as **documentation and a reference implementation**.
-The files under `/R/` must be **copied verbatim** to the local R installation,
-as described below.
+These files are intended to be copied to a local configuration directory in
+the user environment.
 
 ---
 
@@ -139,16 +75,16 @@ Expected result:
 
 ```text
 [1] /Library/Frameworks/R.framework/Versions/<R-version>/Resources/library
-[2] <MY_R_DEVLIB>
+[2] <DEV_LIBRARY>
 ```
 
 Meaning:
 
 - **System library** (`.Library`)
-  - Base / recommended packages
+  - Base and recommended packages
   - All CRAN packages
 
-- **Development library** (`MY_R_DEVLIB`)
+- **Development library**
   - User-developed packages only
 
 No user library (`R_LIBS_USER`) is used in `.libPaths()`.
@@ -157,29 +93,29 @@ No user library (`R_LIBS_USER`) is used in `.libPaths()`.
 
 ## Development library via environment variable
 
-The development library path is defined through an **environment variable**.
-Add the following line to your `~/.Renviron` file:
+The development library path is defined through an environment variable.
+
+Add the following line to `~/.Renviron`:
 
 ```text
-MY_R_DEVLIB=~/Dropbox/Boulot/dev/r/myRlib
+MY_R_DEVLIB=~/path/to/dev/library
 ```
 
-### Why use an environment variable?
+### Rationale
 
 - Avoid hard-coded paths in R scripts
-- Easy portability across machines
-- Clear failure if misconfigured
-- Separation between *policy* and *local paths*
+- Allow easy portability across machines
+- Fail explicitly if misconfigured
+- Separate policy from local filesystem details
 
-If `MY_R_DEVLIB` is not defined, R startup fails explicitly
-with a clear error.
+If `MY_R_DEVLIB` is not defined, R startup fails with a clear error.
 
 ---
 
 ## Local installation layout
 
-On the local machine, the active configuration lives **inside the user home**,
-not inside the GitHub repository.
+On the local machine, the active configuration lives inside the user home
+directory.
 
 Expected layout:
 
@@ -199,8 +135,6 @@ Expected layout:
 1. Clone or download this repository.
 2. Copy the contents of the `/R/` directory into `~/.R/toolbox/`.
 
-Example:
-
 ```bash
 mkdir -p ~/.R/toolbox
 cp R/*.R ~/.R/toolbox/
@@ -210,8 +144,8 @@ cp R/*.R ~/.R/toolbox/
 
 ## Startup behaviour (`.Rprofile`)
 
-The `~/.Rprofile` is deliberately minimal and only sources local files.
-Add the following content **verbatim**:
+The `~/.Rprofile` is deliberately minimal and only sources local configuration
+files:
 
 ```r
 tb <- path.expand("~/.R/toolbox")
@@ -221,10 +155,8 @@ source(file.path(tb, "install_helpers.R"))
 source(file.path(tb, "upgrade_helpers.R"))
 source(file.path(tb, "diagnostics.R"))
 
-message("✅ R startup configured (system + dev)")
+message("R startup configured (system + dev)")
 ```
-
-No logic, no installation, no side effects beyond configuration.
 
 ---
 
@@ -232,42 +164,31 @@ No logic, no installation, no side effects beyond configuration.
 
 ### `00-config.R` — library policy
 
-Responsibilities:
+- Reads `MY_R_DEVLIB`
+- Ensures the development library exists
+- Enforces `.libPaths(c(.Library, .myRlib))`
 
-- Read `MY_R_DEVLIB`
-- Ensure the development library exists
-- Enforce `.libPaths(c(.Library, .myRlib))`
-
-This file defines **policy**, not actions.
+Defines policy only.
 
 ---
 
 ### `install_helpers.R` — installation helpers
 
-Provides explicit helpers:
+- `install_cran(pkgs)`  
+  Installs CRAN packages into `.Library`.
 
-- `install_cran(pkgs)`
-  → installs CRAN packages **into `.Library`**
-
-- `install_my(path = ".")`
-  → installs the current development package **into the dev library**
-
-RStudio’s *Install and Restart* button is deliberately avoided.
+- `install_my(path = ".")`  
+  Installs a development package into the development library.
 
 ---
 
 ### `upgrade_helpers.R` — R upgrade workflow
-
-Defines a reproducible workflow for R upgrades.
 
 Before upgrading R:
 
 ```r
 save_cran_list()
 ```
-
-This saves the list of non-base / non-recommended packages
-currently installed in `.Library`.
 
 After installing a new R version:
 
@@ -275,101 +196,31 @@ After installing a new R version:
 restore_cran_list()
 ```
 
-All packages are reinstalled cleanly into the new system library.
-
-This avoids copying binaries across R versions.
+This reinstalls all non-base packages cleanly into the new system library.
 
 ---
 
-### `diagnostics.R` — validation and inspection
+### `diagnostics.R` — validation utilities
 
-Provides utilities such as:
+Provides read-only diagnostics such as:
 
 - `check_setup()`
-  Prints:
-  - `.libPaths()`
-  - write permissions
-  - test package locations
-
 - `list_sys_nonbase()`
-  Lists CRAN packages installed in `.Library`.
-
 - `list_dev_packages()`
-  Lists packages installed in the development library.
-
-These functions are **read-only** and safe.
 
 ---
 
 ## RStudio workflow recommendations
 
-### Package development
-
-- Use **Build & Reload**
-  - loads the package via `devtools::load_all()`
-  - does *not* install anything
-
-- Use `install_my()` when an installed copy is needed.
-
-### CRAN packages
-
-Always use:
-
-```r
-install_cran("pkgname")
-```
-
-This guarantees the package ends up in `.Library`.
-
----
-
-## R upgrades (summary)
-
-Before upgrading R:
-
-```r
-save_cran_list()
-```
-
-Install new R version (macOS Framework installer).
-
-Restart RStudio.
-
-Restore packages:
-
-```r
-restore_cran_list()
-```
-
-This yields a clean, version-consistent system library.
-
----
-
-## Why this setup works well
-
-- Explicit over implicit
-- No magic paths
-- No dependency on GitHub at startup
-- Reproducible upgrades
-- Clear separation of concerns
-- Easy to debug
-
-This configuration is particularly well suited for:
-
-- long-term scientific workflows
-- multiple R versions over time
-- mixed CRAN + development usage
-- environments where stability matters more than convenience
+- Use **Build & Reload** for development (`devtools::load_all()`).
+- Use `install_my()` only when an installed copy is required.
+- Use `install_cran()` for all CRAN packages.
 
 ---
 
 ## Final note
 
 This toolbox is intentionally **not an R package**.
+The `/R/` layout is used for clarity and potential future evolution.
 
-The use of a `/R/` directory mirrors a package layout only for clarity and
-future extensibility. If, at some point, interactive help or namespace control
-becomes desirable, these helpers could be migrated into a small personal
-package without changing the underlying philosophy.
-
-For now, simplicity and explicitness take precedence.
+The emphasis is on **explicit configuration, reproducibility, and control**.
